# erp-accounting-system

./: .env.example  .gitignore  AUDIT_FINAL_v4.md  AUDIT_REPORT.md  AUDIT_REPORT_v3.md  AUDIT_v5_FINAL.md  CHANGELOG.md  DESKTOP_INSTALL.md  INSTALL.md  README.md  alembic.ini  build.bat  build.sh  erp_accounting.spec  install_windows.bat  installer.iss  main.py  pyproject.toml  requirements.txt  start.bat  start_linux_mac.sh  start_windows.bat  update.bat
adapters/repositories/sql_alchemy/: account_journal_repository.py  invoice_repository.py  party_repository.py  product_repository.py  report_repository.py  user_repository.py
alembic/: env.py
domain/entities/: account.py  invoice.py  journal.py  party.py  product.py  user.py
domain/exceptions/: exceptions.py
domain/value_objects/: value_objects.py
infrastructure/config/: settings.py
infrastructure/db/: seed.py  session.py  unit_of_work.py
infrastructure/db/models/: account_model.py  audit_log_model.py  inventory_model.py  invoice_model.py  journal_model.py  party_model.py  product_model.py  user_model.py
infrastructure/services/: advanced_llm_provider.py  advanced_ocr_service.py  ai_agent_service.py  anomaly_detector.py  audit_service.py  backup_service.py  bank_reconciliation_service.py  cash_flow_predictor.py  email_service.py  excel_service.py  ocr_service.py  openai_provider.py  pdf_service.py
infrastructure/ui/services/: __init__.py  (+1 more)
tests/: conftest.py
tests/unit/: test_advanced_services.py  test_ai_agent.py  test_audit_security.py  test_auth_use_cases.py  test_customers.py  test_invoice_use_cases_extended.py  test_invoices_inventory_reports.py  test_journal.py  test_product_use_cases_extended.py  test_returns_expenses.py  test_screen_styler.py  test_services.py  test_soft_ui.py  test_supplier_use_cases.py  test_ui_logic.py  test_user.py  test_user_repository.py  test_v5_features.py  test_value_objects.py
use_cases/auth/: auth_use_cases.py
use_cases/customers/: customer_use_cases.py
use_cases/invoices/: invoice_use_cases.py  returns_use_cases.py
use_cases/journal/: expenses_use_cases.py  journal_use_cases.py
use_cases/products/: product_use_cases.py
use_cases/reports/: report_use_cases.py
use_cases/repositories/: interfaces.py
use_cases/suppliers/: supplier_use_cases.py
(+23 files in other folders)
